--- a/css/app.css
+++ b/css/app.css
@@ -111,6 +111,17 @@ footer {
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
 }
 
+/* toggle section */
+.toggle-section {
+    float: right;
+    font-size: small;
+    cursor: pointer;
+}
+.toggle-hidden-section {
+    font-size: medium;
+    color: #444;
+}
+
 /* buttons */
 .button {
     background: #62493c;
@@ -141,6 +152,7 @@ footer {
 @media print {
 
     /* hide a few unmeeded areas */
+    .print-hidden,
     .filters,
     .about-site,
     .newsletter,
