--- a/css/app.css
+++ b/css/app.css
@@ -2,16 +2,19 @@
 /* ===== Base ===== */
 html { height: auto !important; /* force as google translate tries to change this */ }
 body {
-    font-family: 'Noto Serif', serif;
+    font-family: 'Noto Sans', sans-serif;
     color: #444;
     background: #fef7e1;
     background: linear-gradient(to bottom, #fef7e1 0%, #fec021 100%);
 }
 h1, h2, h3 {
-    font-family: 'Noto Sans', sans-serif;
+    font-family: 'Noto Serif', serif;
 }
 h1, h2, h3, a {
     color: #62493c;
+}
+p {
+    line-height: 1.3;
 }
 hr {
     border: none;
