--- a/css/app.css
+++ b/css/app.css
@@ -42,6 +42,16 @@ img {
 }
 a { cursor: pointer; }
 
+/* quotes */
+blockquote { position: relative; font-style: italic; }
+blockquote:before {
+    font-family: FontAwesome;
+    content: "\f10d";
+    position: absolute;
+    top: 0px;
+    left: -30px;
+}
+
 /* highlight text */
 ::selection {
     background-color: #fec021;
