Fixed hiding entire sidebar on print, instead of specific sidebar blocks

--- a/css/app.css
+++ b/css/app.css
@@ -251,10 +251,8 @@ footer {
 
     /* hide a few unmeeded areas */
     .print-hidden,
-    .ssowl,
+    .sidebar,
     .filters,
-    .about-site,
-    .newsletter,
     .nav,
     .footer,
     .skiptranslate,
