fix(addthis): removed addthis social sharing as I think most people just copy the url to share or use browser share features instead anyway

--- a/css/app.css
+++ b/css/app.css
@@ -255,8 +255,7 @@ footer {
     .filters,
     .nav,
     .footer,
-    .skiptranslate,
-    .addthis_inline_share_toolbox { display: none; }
+    .skiptranslate { display: none; }
 
     .block {
         /* remove shadow areas */
